Thu Nov  2 10:35:21 PDT 2017  Basil Gunn <basil@pacabunga.com>

    * Fix "wl2kxxxx: B2 protocol error 1" pending message parsing bug.
      * B2 parser was expecting "FS" but finds ";PM" instead
      File modified: wl2k.c

Sat Jan 21 15:41:38 PST 2017  Basil Gunn <basil@pacabunga.com>

    * Add support for SCS P4dragon
      Files modified:
        wl2k.conf.dist
        wl2kserial.c

Sun Oct 16 11:31:25 PDT 2016  Basil Gunn <basil@pacabunga.com>

    * Display string of incorrect call sign for mbo.
      File modified: mime2wl.c

    * Return child process status when parent exits.  Enables using
      wl2kax25 in a shell script to detect when wl2kax25 child process
      times out. Requested by Mark KD0QYN.
      File modified: wl2kax25.c

Wed Oct  8 11:11:20 PDT 2014  Basil Gunn <basil@pacabunga.com>

    * Updated webapp INSTALL notes to include all external node modules.
      File modified: webapp/INSTALL

Tue Oct  7 16:29:07 PDT 2014  Basil Gunn <basil@pacabunga.com>

    * Remove jquery verion number from jquery file name in html file.
       Added install instructions.
       Load external modules from global directory.
       Get uid/gid for spawning commands programmatically.
       Delete unused getNetworkIP code.
       Update server code to use connect 3.x module.
       Files Added: webapp/INSTALL
       Files modified:
         webapp/plu-server.js
         webapp/plu.html

Mon Apr  7 13:10:47 PDT 2014  Basil Gunn <basil@pacabunga.com>

    * Updated my call sign & Jeffery Stedfast's e-mail
      at request of C.J. KF7BMP
      Files modified:
        AUTHORS
        doc/wl2kax25d.1

Mon Apr  7 12:52:23 PDT 2014  Basil Gunn <basil@pacabunga.com>

    * A patch was mostly provided by C.J. KF7BMP to correct warnings
      in the current version of autoconf.
      File modified: configure.ac

Sun May 26 13:01:57 PDT 2013  Basil Gunn <basil@pacabunga.com>

    * A patch was provided by Brian WB4ES that adds Winlink secure